# Markdown-Interpreter

./: .gitignore  LICENSE  README.md  build_all.bat  markdown_interpreter.html  package-lock.json  package.json
.claude/: settings.local.json
assets/: markdown-interpreter.desktop
renderer/: index.html  renderer.js  style.css
scripts/: generate-icon.js  install-linux-deps.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
