[package]
name = "markdown-interpreter"
version = "1.0.0"
description = "Lightweight markdown viewer and editor"
authors = ["Gamepro5"]
license = "MIT"
homepage = "https://github.com/Gamepro5/Markdown-Interpreter"
repository = "https://github.com/Gamepro5/Markdown-Interpreter"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.3", features = ["tray-icon", "protocol-asset"] }
dirs = "6"
tauri-plugin-dialog = "2"
notify = { version = "8", features = ["macos_fsevent"] }
tauri-plugin-cli = "2"
tauri-plugin-shell = "2"
